syntax = "proto3";
package chaintree;
option go_package = "chaintree";

import "google/protobuf/any.proto";

message SetDataPayload {
  string path = 1;
  bytes value = 2;
}

message SetOwnershipPayload {
  repeated string authentication = 1;
}

message CoinMonetaryPolicy{
  uint64 maximum = 1;
}

message EstablishCoinPayload{
  string name = 1;
  CoinMonetaryPolicy monetary_policy = 2;
}

message MintCoinPayload{
  string name = 1;
  uint64 amount = 2;
}

message Transaction{
  string type = 1;
  google.protobuf.Any Payload = 2;
}
